--- a/src/App.css
+++ b/src/App.css
@@ -373,7 +373,8 @@ h3 img {
   .creators_main .container,
   .content_marketplace_header .container,
   .hub_main_partner .container,
-  .put_on_marketplace .container {
+  .put_on_marketplace .container,
+  .create_campaign_content .container {
     max-width: 1290px;
   }
 }
