--- a/src/components/Iframe/Iframe.css
+++ b/src/components/Iframe/Iframe.css
@@ -7,9 +7,9 @@ header {
   box-shadow: none;
 }
 
-.bm-burger-button {
+/* .bm-burger-button {
   position: absolute !important;
-}
+} */
 
 .iframe_header {
   background: url('../../assets/img/iframe_header.png') no-repeat center;
